changing things... tried to fix bug with answer check but failed :(
Former-commit-id: 789f732a94b23c762b87d471078fae1ad0f41614

--- a/www/assets/json/tasks/bathroom_tasks.json
+++ b/www/assets/json/tasks/bathroom_tasks.json
@@ -53,21 +53,21 @@
 			"difficulty": 3,
 			"audio": "wav/shower.wav",
 			"items": [
-				{
-					"item": "dusch",
-					"category": "",
-					"order": 1
-					
-				},
                 {
                     "item": "schampo",
                     "category": "",
-                    "order": 2
+                    "order": 1
                 },
                 {
-					"item": "",
-					"category": "soap",
+					"item": "duschtval",
+					"category": "",
+					"order": 1
+				},
+				{
+					"item": "dusch",
+					"category": "",
 					"order": 2
+					
 				},
 				{
 					"item": "handduk",
